--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.2.6
   path: ^1.8.2
+  get: ^4.6.5
+  splashscreen: ^1.3.5
 
 dev_dependencies:
   flutter_test:
